# OpenGL-superbible-learning

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
include/: ElementBuffer.h  Renderer.h  Shader.h  Texture.h  VertexArrayObject.h  VertexBuffer.h  VertexBufferLayout.h
res/shaders/: VertexColor.glsl
src/: ElementBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArrayObject.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  main.cpp
